fixes a bug in the Bookmark displaying
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/freenet@9545 67a373e5-eb02-0410-a15c-ee090a768436